--- a/04-qualtrics.Rmd
+++ b/04-qualtrics.Rmd
@@ -62,13 +62,13 @@ There are two approaches to entering survey items into Qualtrics.
 
 * Enter the items one at a time using the Qualtrics web interface.
 
-* Create a text file using Qualtrics [Advanced Text Format](https://www.qualtrics.com/support/survey-platform/survey-module/survey-tools/import-and-export-surveys/) and import the times. Be warned though a bit of tweaking is often still needed using the web interface.
+* Create a text file in the Qualtrics [Advanced Text Format](https://www.qualtrics.com/support/survey-platform/survey-module/survey-tools/import-and-export-surveys/) and import the itme. Be warned though a bit of tweaking is often still needed using the web interface.
 
 Here we focus only on the second approach to entering items into Qualtrics.
 
 ### Create survey codebook
 
-We want to create a survey that contains 2 demographics items, 18 commitment items, and 4 job satisfaction items. To do we create a survey codebook spreadsheet in Excel (or similar program). The spreadsheet should have the columns block, item_name, item_text, type, response_options. The completed file is illustrated below  [survey_codebook.csv](survey_codebook.csv) file. Although you can see the information that should be in each column based of the figure I provide a detailed information of what should be placed in each column. Remember to work from the guiding principle that one row is use for one item/question.
+The easy way to create items in the [Advanced Text Format](https://www.qualtrics.com/support/survey-platform/survey-module/survey-tools/import-and-export-surveys/) is to use the qualtricsMaker package. With this package you create a spreadsheet with the items and then convert that spreadsheet to the Advanced Text Format. Consider a scneario where we want to create a survey that contains 2 demographics items, 18 commitment items, and 4 job satisfaction items. We being by creating a survey codebook spreadsheet in Excel (or similar program). The spreadsheet should have the columns with the names: block, item_name, item_text, type, response_options. The completed file (  [survey_codebook.csv](survey_codebook.csv)) is illustrated below. Although you can see the information that should be in each column based of the figure I provide a detailed information of what should be placed in each column. Remember to work from the guiding principle that one row is use for one item/question.
 
 ```{r, echo=FALSE, out.width="100%"}
 knitr::include_graphics("ch_qualtrics/images/screenshot_items.png")
@@ -137,14 +137,48 @@ Strongly Disagree; Disagree; Neutral; Agree; Strongly Agree
 
 #### Create TXT file
 
-Once you have the survey codebook above, you need to convert it to an [Advanced Text Format](https://www.qualtrics.com/support/survey-platform/survey-module/survey-tools/import-and-export-surveys/) .txt file. We can do so by following the steps below.
+Once you have the survey codebook above, you need to convert it to an [Advanced Text Format](https://www.qualtrics.com/support/survey-platform/survey-module/survey-tools/import-and-export-surveys/) .txt file. We can do so by following the steps below. The instructions differ slightly for RStudio Cloud and RStudio - both are presented.
 
 ##### RStudio on your computer
-1. Create a folder on your computer called "new_survey" with the survey_codebook.csv file in it.
+1. Create a folder on your computer called "new_survey" **with the survey_codebook.csv file in it.** 
 
-2. Open RStudio. Then go to File > New Project...
+2. Open RStudio. Then go to File > New Project... and select Existing Directory.
 
-3.  
+```{r, echo = FALSE, out.width="50%"}
+knitr::include_graphics("ch_qualtrics/images/screenshot_existing_dir.png")
+```
+
+2. Then find and select the "new_survey" folder on your hard drive and click the Create Project button.
+
+```{r, echo = FALSE, out.width="50%"}
+knitr::include_graphics("ch_qualtrics/images/screenshot_folder.png")
+```
+
+3. You should previously have installed the remote and tidyverse package from the CRAN and the qualtricsMaker package from GitHub. If you haven't done this already type the commands below into the **Console**.
+
+**Installing Packages from the CRAN**
+
+```{r, eval=FALSE}
+install.packages("tidyverse", dep = TRUE)
+install.packages("remotes", dep = TRUE)
+```
+
+**Installing Package from GitHub**
+
+Then install the qualtricsMaker package from GitHub:
+
+```{r, eval = FALSE}
+remotes::install_github("dstanley4/qualtricsMaker")
+```
+
+
+3. Create a new script by going to File > New File > R Script. A new script will appear in RStudio. Immediately press Control-S to save the script. Call it "script_convert.R".
+
+```{r, echo = FALSE, out.width="50%"}
+knitr::include_graphics("ch_qualtrics/images/screenshot_new_script.png")
+```
+
+4. Place the code below into the script and press Control-S to save your work.
 
 ```{r, eval = FALSE}
 library(tidyverse)
@@ -157,16 +191,23 @@ make_survey(survey_codebook,
             filename = "items_qualtrics_format.txt")
 ```
 
+5. Run the script by pressing the Source button in the top right of the the Script window. Doing so will create the items_qualtrics_format.txt file that you will import into Qualtrics. You can see the file after it has been created in the Files tab below.
+
+```{r, echo = FALSE, out.width="50%"}
+knitr::include_graphics("ch_qualtrics/images/screenshot_post_creation.png")
+```
+
+**Congratulation - your items are ready to be imported into Qualtrics. Move on to the "Import the items" section.**
+
 
 ##### RStudio Cloud
 
-1. Open a new project
+1. Open a new project in RStudio Cloud
 
-2. Ensure you ave installed the packages specified above by typing the commands below into the RStudio Cloud Console (not the script window).
+3. You should previously have installed the remote and tidyverse package from the CRAN and the qualtricsMaker package from GitHub. If you haven't done this already type the commands below into the **Console**.However, if you are working from a class project I created **these packages will have been installed already for you.**
 
 ```{r, eval=FALSE}
 install.packages("tidyverse", dep = TRUE)
-install.packages("janitor", dep = TRUE)
 install.packages("remotes", dep = TRUE)
 ```
 
@@ -176,14 +217,26 @@ Then install the qualtricsMaker package from GitHub:
 remotes::install_github("dstanley4/qualtricsMaker")
 ```
 
-3. Import the [survey_codebook.csv](survey_codebook.csv) file by using the Import button in the Files tab in the lower right panel.
+4. Import the [survey_codebook.csv](survey_codebook.csv) file by using the Upload button in the Files tab in the lower right panel.
 
 ```{r, echo = FALSE, out.width = "50%"}
 knitr::include_graphics("ch_qualtrics/images/screenshot_import_button.png")
 ```
 
 
+5. Click the Choose File button and select the survey_codebook.csv file on your hard drive. Then click OK. The survey_codebook.csv file will then appear on the Files tab within RStudio Cloud.
 
+```{r, echo = FALSE, out.width = "50%"}
+knitr::include_graphics("ch_qualtrics/images/screenshot_choose_file.png")
+```
+
+6. Create a new script by going to File > New File > R Script. A new script will appear in RStudio. Immediately press Control-S to save the script. Call it "script_convert.R".
+
+```{r, echo = FALSE, out.width="50%"}
+knitr::include_graphics("ch_qualtrics/images/screenshot_new_script_RSC.png")
+```
+
+7. Place the code below into the script and press Control-S to save your work.
 
 ```{r, eval = FALSE}
 library(tidyverse)
@@ -196,13 +249,39 @@ make_survey(survey_codebook,
             filename = "items_qualtrics_format.txt")
 ```
 
+8. Run the script by pressing the Source button in the top right of the the Script window. Doing so will create the items_qualtrics_format.txt file that you will import into Qualtrics. You can see the file after it has been created in the Files tab below.
+
+```{r, echo = FALSE, out.width="50%"}
+knitr::include_graphics("ch_qualtrics/images/screenshot_post_creation_RSC.png")
+```
+
+
+9. Select the checkbox beside the file you just created: items_qualtrics_format.txt
+
+```{r, echo = FALSE, out.width="35%"}
+knitr::include_graphics("ch_qualtrics/images/screenshot_select_export_file.png")
+```
+
+10. Select Export from the More menu.
+
+```{r, echo = FALSE, out.width="60%"}
+knitr::include_graphics("ch_qualtrics/images/screenshot_select_export_menu.png")
+```
+
+11. Leave the filename as it appears and click the Download button. The file will appear in the Downloads directory on your computer.
+
+```{r, echo = FALSE, out.width="40%"}
+knitr::include_graphics("ch_qualtrics/images/screenshot_export_filename.png")
+```
+
+12. Move the file (items_qualtrics_format.txt) from the Download folder to an easy to access place (e.g. the Desktop).
 
 
 ### Import the items
 
 ##### Click the Create New Project button.
 
-```{r, echo=FALSE, out.width="30%"}
+```{r, echo=FALSE, out.width="20%"}
 knitr::include_graphics("ch_qualtrics/images/screenshot_b1.png")
 ```
 
@@ -232,6 +311,8 @@ Select the Import option and then specify the filename for the Advanced Text imp
 knitr::include_graphics("ch_qualtrics/images/screenshot_b5.png")
 ```
 
+**Congratulation - your items are ready to be imported into Qualtrics. Move on to the "Import the items" section.**
+
 
 #### Resulting Survey
 
@@ -259,7 +340,7 @@ Following data collection, you can obtain your data from Qualtrics. As of 2021, 
 knitr::include_graphics("ch_qualtrics/images/screenshot_data.png")
 ```
 
-##3# Click the Export & Import button.
+#### Click the Export & Import button.
 
 Then click the **Export Data...** option.
 
