--- a/04-qualtrics.Rmd
+++ b/04-qualtrics.Rmd
@@ -24,14 +24,13 @@ The overall steps are quite simple and I walk you through each step in detail be
 
 ## Required
 
-The data files below are used in this chapter. Right click to save each file.
+The files below are used in this chapter. Right click to save each file. 
 
-| Required Data |
+| Relevant files |
 |-------------------|
 |[survey_codebook.csv](survey_codebook.csv)   |
-|[survey_items_qualtrics_format.txt](survey_items_qualtrics_format.txt)   |
+|[items_qualtrics_format.txt](items_qualtrics_format.txt)|
 |[data_qualtrics_raw.csv](data_qualtrics_raw.csv)   |
-
 
 The following CRAN packages must be installed:
 
@@ -281,9 +280,16 @@ knitr::include_graphics("ch_qualtrics/images/screenshot_export_filename.png")
 
 ### Import the items
 
-Begin by logging into Qualtrics via the University of Guelph site for [Data Collection & Surveys](https://www.lib.uoguelph.ca/working-data/data-collection-surveys). After you log in continue below.
+In the previous step you created items_qualtrics_format.txt. This file is illustrated below - well the middle of the file is illustrated below. You can think of the file created by the survey_maker command above as a starting point. You could open up this file in a text editor and make further modifications or additions based on learning the [Advanced Text Format](https://www.qualtrics.com/support/survey-platform/survey-module/survey-tools/import-and-export-surveys/). For example, you might not want the matrix items to be in their own block. If so, you would simply remove the block text [[Block:Commitment]] from the text file prior to following the directions below. If you're a Mac user you might find the text editor [BBEdit](https://www.barebones.com/products/bbedit/download.html) for helpful for this purpose -- the free version is sufficient. After you download BBEdit you have access to all of its features. Once the free trial ends - the core features are still free. You only need to purchase it if you want the advanced features (and you won't need the advanced features).
+
+```{r, echo=FALSE, out.width="100%"}
+knitr::include_graphics("ch_qualtrics/images/screenshot_advanced_text.png")
+```
 
 
+##### Begin the import by logging into Qualtrics
+
+Begin by logging into Qualtrics via the University of Guelph site for [Data Collection & Surveys](https://www.lib.uoguelph.ca/working-data/data-collection-surveys). After you log in, continue below.
 
 ##### Click the Create New Project button in the top right of the page.
 
@@ -331,9 +337,9 @@ knitr::include_graphics("ch_qualtrics/images/screenshot_empty_block.png")
 
 ### Tweak survey in Qualtrics
 
-Now you need to tweak the survey using the Qualtrics interface. Recall when you import items into a matrix style question Qualtrics drops the item names. **You need to manually restore the item names now for matrix questions.**
+Now you need to tweak the survey using the Qualtrics interface. Recall that when you import items into Qualtrics, matrix-style questions will loose their item names. **You need to manually restore the item names for matrix questions now.**
 
-1. Begin by scrolling down to a block of matrix style questions. Select the block so it gets a blue rectangle around it.
+1. Begin by scrolling down to a block of matrix-style questions. Select the block so it gets a blue rectangle around it.
 
 ```{r, echo=FALSE, out.width="100%"}
 knitr::include_graphics("ch_qualtrics/images/screenshot_exporttag_select.png")
