--- a/04-qualtrics.Rmd
+++ b/04-qualtrics.Rmd
@@ -394,20 +394,302 @@ knitr::include_graphics("ch_qualtrics/images/screenshot_export.png")
 
 #### Click Use Choice Text
 
-To ensure the data can be used by others, as per the FAIR policy described above, we SELECT the "Use Choice Text" option when exporting data. If you were (non-optimally) select "Use numeric value" as an export option then the resulting data file would be missing information that make it difficult for others to use. Then click the Download button.
+To ensure the data can be used by others, as per the FAIR policy described above, we SELECT the "Use Choice Text" option when exporting data. If you were (non-optimally) select "Use numeric value" as an export option then the resulting data file would be missing information that make it difficult for others to use. Then click the Download button. 
 
 ```{r, echo=FALSE, out.width="60%"}
 knitr::include_graphics("ch_qualtrics/images/screenshot_export_choice.png")
 ```
 
+The file will appear in your downloads directory.
 
-In doing so we have several goals
+* It will likely be a zipped filed. Unzip the file before proceeding. On a Mac, you can just double click the file to do so.
 
-* Ensure a workflow that is reproducible. 
-
-* Ensure the data file has as much information as possible - so facilitate reuse by others. 
+* Rename the file to data_survey.csv
 
 
 ### Load data in R
 
+To load the data in R follow the steps below
+
+1. Create a new folder called "survey_data"
+
+2. Drag the data_survey.csv file to the survey_data folder.
+
+3. Use the steps described previously on this page, use RStudio to create project for this data.
+
+4. You may be tempted to load the data using the usual read_csv() process. This will be problematic due to the way the data is formatted in the .csv file. (see image below.)
+
+
+
 ### Convert to analytic data
+
+
+
+Read the file in with the right columns names - excluding unwanted rows.
+
+```{r, results='hide'}
+# Date: YYYY-MM-DD
+# Name: your name here
+# Example: Single occasion survey
+
+# Load data
+library(tidyverse)
+library(janitor)
+
+# read the file in the normal way and get just the names of the columns.
+# put the names into the col_names
+survey_file <- "data_qualtrics.csv"
+col_names <- names(read_csv(survey_file,
+                            n_max = 0,
+                            show_col_types = FALSE))
+
+# skip the first 3 rows than read in the data and use names from above
+raw_data <- read_csv(survey_file,
+                  col_names = col_names, 
+                  skip = 3,
+                  show_col_types = FALSE)
+```
+
+
+Remove the Qualtrics columns you probably don't want:
+
+```{r}
+# list of Qualtrics columns you probably don't want
+cols_to_maybe_remove <- c("StartDate",
+                   "EndDate",
+                   "Status",
+                   "IPAddress",
+                   "Progress",
+                   "Duration (in seconds)",
+                   "Finished",
+                   "RecordedDate",
+                   "ResponseId",
+                   "RecipientLastName",
+                   "RecipientFirstName",
+                   "RecipientEmail",
+                   "ExternalReference",
+                   "LocationLatitude",
+                   "LocationLongitude",
+                   "DistributionChannel",
+                   "UserLanguage")
+
+# check to see overlap with actual column names in data file
+# put names to remove (that are present) into cols_to_remove
+cols_to_remove_id <- col_names %in% cols_to_maybe_remove
+cols_to_remove <- col_names[cols_to_remove_id]
+
+# remove the unwanted qualtrics columns
+raw_data <- raw_data %>% 
+  select(!all_of(cols_to_remove))
+```
+
+We make a copy of the data called analytic_data_survey since the goals of the next several steps are to prepare the data for analysis.
+
+
+```{r}
+analytic_data_survey <- raw_data
+
+```
+
+Remove empty row and columns from your data using the remove_empty_cols() and remove_empty_rows(), respectively. As well, clean the names of your columns to ensure they conform to tidyverse naming conventions. 
+
+```{r, results = "hide"}
+library(janitor)
+
+# Initial cleaning
+analytic_data_survey <- analytic_data_survey %>%
+  remove_empty("rows") %>%
+  remove_empty("cols") %>%
+  clean_names()
+```
+
+You can confirm the column names following our naming convention with the glimpse command - and see the data type for each column.
+
+```{r}
+glimpse(analytic_data_survey)
+```
+
+### Creating factors
+
+Following initial cleaning, we identify categorical variables as factors. If you plan to conduct an ANOVA - it's critical that all predictor variables are converted to factors. Inspect the glimpse() output - if you followed our data entry naming conventions, categorical variables should be of the type character. 
+```{r}
+glimpse(analytic_data_survey)
+```
+
+We have two variables, sex and eye_color, that are categorical variable of type character (i.e., chr). The participant id column is categorical as well, but of type double (i.e., dbl) which is a numeric column. You can quickly convert all character columns to factors using the code below:
+
+```{r}
+analytic_data_survey <- analytic_data_survey %>%
+  mutate(across(.cols = where(is.character),
+                .fns = as_factor))
+
+```
+
+We don't have a participant identification column, so make one:
+
+```{r}
+N <- dim(analytic_data_survey)[1] # get the number of rows in the data set
+
+analytic_data_survey <- analytic_data_survey %>%
+  mutate(id = seq(1, N))
+```
+
+The participant identification number in the id column is a numeric column, but we want it to be a factor. 
+
+```{r}
+analytic_data_survey <- analytic_data_survey %>%
+  mutate(id = as_factor(id))
+```
+
+You can ensure all of these columns are now factors using the glimpse() command. 
+
+```{r}
+glimpse(analytic_data_survey)
+```
+
+Inspect the output of the glimpse() command and make sure you have converted all categorical variables to factors - especially those you will use as predictors.
+
+
+### Factor screening
+
+Inspect the levels of each factor carefully. Make sure the factor levels of each variable are correct. Examine spelling and look for additional unwanted levels. For example, you wouldn't want to have the following levels for sex: male, mmale, female. Obviously, mmale is an incorrectly typed version of male. Scan all the factors in your data for erroneous factor levels. The code below displays the factor levels:
+
+```{r}
+analytic_data_survey %>%
+  select(where(is.factor)) %>%
+  summary()
+```
+
+
+Also inspect the output of the above summary() command paying attention to the order of the levels in the factors. The order influences how text output and graphs are generated. In these data, the sex column has two levels: male and female in that order. Below we adjust the order of the sex variable because we want the x-axis of a future graph to display columns in the left to right order: female, male.
+
+```{r}
+analytic_data_survey <- analytic_data_survey %>%
+  mutate(sex = fct_relevel(sex,
+                           "intersex",
+                           "female",
+                           "male"))
+```
+
+
+### Item values from labels
+
+```{r}
+# Check levels for a likert7 item
+analytic_data_survey %>%
+  pull(aff_com1_likert7) %>%
+  unique()
+```
+
+Based on that output create a factor:
+
+```{r}
+# write code to create a factor
+likert7_factor <- c("Strongly Disagree",
+                    "Moderately Disagree",
+                    "Slightly Disagree",
+                    "Neither Agree nor Disagree",
+                    "Slightly Agree",
+                    "Moderately Agree",
+                    "Strongly Agree")
+
+```
+
+```{r}
+
+# Check levels for a likert5 item
+analytic_data_survey %>%
+  pull(job_aff1_likert5) %>%
+  unique()
+```
+
+```{r}
+
+# write code to create a factor
+likert5_factor <- c("Strongly Disagree",
+                     "Disagree",
+                     "Neutral",
+                     "Agree",
+                     "Strongly Agree")
+```
+
+
+```{r}
+# Create numeric versions of Likert Response Options
+# First mutate command turns everything to a factor as defined above
+# Second mutate command converts factor to a numeric variable
+# Treat 5 and 7 point scale in different code blocks
+analytic_data_survey <- analytic_data_survey %>%
+  mutate(across(.cols = contains("likert5"), 
+                .fns = ~ factor(.x, levels = likert5_factor))) %>%
+  mutate(across(.cols = contains("likert5"), 
+                .fns = as.numeric))
+
+analytic_data_survey <- analytic_data_survey %>%
+  mutate(across(.cols = contains("likert7"), 
+                .fns = ~ factor(.x, levels = likert7_factor))) %>%
+  mutate(across(.cols = contains("likert7"), 
+                .fns = as.numeric))
+
+```
+
+### Scale scores
+
+For each person, scale scores involve averaging scores from several items to create an overall score. The first step in the creation of scales is correcting the values of any reverse-keyed items.
+
+#### Reverse-key items
+
+
+```{r,echo=TRUE,eval=TRUE}
+analytic_data_survey <- analytic_data_survey %>% 
+  mutate(8 - across(.cols = ends_with("_likert7rev")) ) %>% 
+  rename_with(.fn = str_replace,
+              .cols = ends_with("_likert7rev"),
+              pattern = "_likert7rev",
+              replacement = "_likert7")
+```
+
+You can see that are all keyed in the right direction now.
+
+```{r}
+glimpse(analytic_data_survey)
+```
+
+
+#### Creating scores
+
+**Important:** Take note of how we name the scale variables (e.g., self_esteem, job_sat). We use a slightly different convention than our items. That is, these scale labels were picked so that they would *not* be selected by a starts_with("esteem") or starts_with("jobsat"). Why - because we later use those commands to remove the item-level data. We would want the command designed to remove the item-level data to also remove the scale we just calculated! This example illustrates how carefully you need to think about your naming conventions.
+
+```{r}
+analytic_data_survey <- analytic_data_survey %>% 
+  rowwise() %>% 
+  mutate(affective_commitment = mean(c_across(starts_with("aff_com")),
+                               na.rm = TRUE)) %>%
+  mutate(continuance_commitment = mean(c_across(starts_with("contin_com")),
+                               na.rm = TRUE)) %>%
+  mutate(normative_commitment = mean(c_across(starts_with("norm_com")),
+                               na.rm = TRUE)) %>%
+  mutate(job_satisfaction = mean(c_across(starts_with("job_aff")),
+                               na.rm = TRUE)) %>%
+  ungroup() %>%
+  select(-starts_with("aff_com")) %>%
+  select(-starts_with("contin_com")) %>%
+  select(-starts_with("norm_com")) %>%
+  select(-starts_with("job_aff")) 
+  
+```
+
+We can see our data now has the self_esteem column, a job_sat column, and that all of the item-level data has been removed.
+
+```{r}
+glimpse(analytic_data_survey)
+```
+
+You now have two data sets analytic_data_survey and analytic_data_survey_items. You can calculate descriptive statistics, correlations and most analyses using the analytic_data_survey. To obtain the reliability of the scales you just created though you will need to use the analytic_data_survey_items. Both sets of data are ready for analysis.
+
+### Complete script
+
+Here is the complete script in one block.
+
+
+
